# autorepl

./: README.md  docker-compose.yaml
.github/workflows/: production.yaml
agent/: Dockerfile  README.md  pyproject.toml
agent/app/: server.py
backend/: .gitignore  Dockerfile  README.md  bun.lockb  entrypoint.sh  package.json
backend/prisma/: schema.prisma
backend/prisma/client/: edge.js  index.d.ts  index.js  package.json  schema.prisma  wasm.js
backend/src/: index.ts
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: action.ts  globals.css  layout.tsx  page.tsx
frontend/app/auth/: action.ts  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/mocks/: mock.ts  mockFunction.ts
frontend/app/social/: action.ts  page.tsx
frontend/app/wiki/: page.tsx
frontend/components/: google-sign-in.tsx
frontend/components/auth/: auth.tsx  google-logo.tsx  sign-in.tsx  sign-up.tsx
frontend/models/: model.ts  wiki.ts
frontend/provider/: google-oauth-provider.tsx
frontend/store/: useAuthStore.ts
frontend/utils/: axios.ts  formatIsoDate.ts  getUserFallback.ts  parseJwtPayload.ts
script/: local-setup.sh  setup.sh
server/: Dockerfile  Makefile  README.md  app.env  example.env  go.mod  go.sum  main.go  sqlc.yaml
server/api/: auth.go  mail.go  middleware.go  server.go  users.go
server/docs/: docs.go  swagger.json  swagger.yaml
server/token/: jwtmaker.go  maker.go  pasetomaker.go  payload.go
server/util/: config.go  password.go  slug.go
(+27 files in other folders)
